<resources>
    <string name="app_name">Oddíl</string>

    <string name="name">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="newsfeed">Newsfeed</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>

    <string name="save">Save</string>
</resources>
