<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/basicInfoLayout"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:text="@string/profile" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />
        </LinearLayout>

        <ImageView
            android:id="@+id/profilePictureImageView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="2"
            android:src="@drawable/profile" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@id/basicInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/AboutEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="5"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            android:gravity="top" />

        <Button
            android:id="@+id/SaveAboutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="end"/>
    </LinearLayout>

    <Button
        android:id="@+id/UploadProfilePictureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Upload profile picture"
        android:layout_above="@id/SignOutButton" />

    <Button
        android:id="@+id/SignOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>